--- a/tex/paper.tex
+++ b/tex/paper.tex
@@ -203,34 +203,43 @@ W = \left\lceil X \right\rceil
 
 $a_t$ is the sampled value $W$ at time $t$ at it is used as the window until the $t+1$, which is the reception of the next acknowledgement. 
 
-Let
-\begin{align*}
-\Sigma R_t = \sum_{i \in \left \{\text{packet}, \text{byte}, \text{delay}, \text{duration}\right \}} R_{i_t}
-\end{align*}
-and
-\begin{align*}
-\Sigma v_t = \sum_{i \in \left \{\text{packet}, \text{byte}, \text{delay}, \text{duration}\right \}} v_{i_t}.
-\end{align*}
+%Let
+%\begin{align*}
+%\Sigma R_t = \sum_{i \in \left \{\text{packet}, \text{byte}, \text{delay}, \text{duration}\right \}} R_{i_t}
+%\end{align*}
+%and
+%\begin{align*}
+%\Sigma v_t = \sum_{i \in \left \{\text{packet}, \text{byte}, \text{delay}, \text{duration}\right \}} v_{i_t}.
+%\end{align*}
 
 With $H$ being the entropy and $S$ being the skewness, the actor network minimizes the loss
 \begin{align*}
-l_{\text{a}_t} =& -\log \left( \pi_W\left( a_t-1 < W \leq a_t \given s_t; \theta_a \right)\right)\left(\Sigma R_t - \Sigma v_t\right)\\ 
+l_{\text{a}_t} =& -\log \left( \pi_W\left( a_t-1 < W \leq a_t \given s_t; \theta_a \right)\right)\left(\frac{}{} - \Sigma v_t\right)\\ 
 &+ \beta H\left(\text{Lognormal}\left( \mu_\text{normal}, {\sigma_{\text{normal}}}^{2}\right) \right)\\
 &- \delta S\left(\text{Lognormal}\left( \mu_\text{normal}, {\sigma_{\text{normal}}}^{2}\right) \right).
 \end{align*}
 
 $\beta$ was set to $\frac 1 2 10^{-3}$ and $\delta$ to $10^{-3}$.
 
-Reinforcement learning assumes that a reward follows an action and vice-versa (see \autoref{fig:reinforcement}). However, in the case of congestion control, it is desirable to perform a new action without having received reward for the previous on. For example, imagine the that you receive two acknowledgements directly after each other. For each of these two acknowledgement an action has to be performed but it does not seem feasible for the second action to wait until the first action has received a reward. The Asynchronous Actor Critic framework as described by \cite{mnih_asynchronous_2016} cannot be applied to congestion control as it assumes that actions and rewards are synchronized. 
-
-Thus we propose the Asynchronous Asynchronous Actor Critic framework in which there are two threads within each thread: one thread that generates actions upon receiving a state and one that receives rewards and updates the value and actor networks. \todo[inline]{Insert two algorithm environments that show what happens upon receiving actions and rewards}
+Reinforcement learning assumes that a reward follows an action and vice-versa (see \autoref{fig:reinforcement}). However, in the case of congestion control, it is desirable to perform a new action without having received a reward for the previous action. For example, imagine that you receive two acknowledgements directly after each other. For each of these two acknowledgements an action has to be performed but it does not seem feasible for the second action to wait until the first action has received a reward. The Asynchronous Actor Critic framework as described by \cite{mnih_asynchronous_2016} cannot be applied to congestion control as it assumes that actions and rewards are synchronized.
 
 \begin{figure}
 \includesvg{figures/Reinforcement_learning_diagram}
 \caption{The classic reinforcement learning approach.\protect\footnotemark}
 \label{fig:reinforcement}
 \end{figure}
-\footnotetext{\url{https://upload.wikimedia.org/wikipedia/commons/1/1b/Reinforcement_learning_diagram.svg}}
+\footnotetext{from \url{https://upload.wikimedia.org/wikipedia/commons/1/1b/Reinforcement_learning_diagram.svg}}
+
+Thus we propose the Partial Action Actor Critic Learning (PAL) framework (see \autoref{fig:pal}) in which one action generates a number of partial actions ($leq 1$). Each partial interaction generates a partial reward upon generating with the environment. Upon receiving a partial reward, the agent estimates the current state and triggers a new action. When all partial rewards of one action were received, the agent combines them to form the reward and updates the value and actor networks. 
+
+\begin{figure}
+\includesvg{figures/Reinforcement_learning_diagram_PAL}
+\caption{Partial Action Actor Critic Learning: An action consists of zero or more partial actions which trigger partial rewards upon interacting with the environment. Each partial reward updates the state. The value and actor networks are updated upon receiving all partial rewards of one action.\protect\footnotemark}
+\label{fig:pal}
+\end{figure}
+\footnotetext{adapted from \url{https://upload.wikimedia.org/wikipedia/commons/1/1b/Reinforcement_learning_diagram.svg}}
+
+Spam and eggs
  
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{congestion}
